# XRPLLib

./: .gitignore  CMakeLists.txt  README.md
include/xrpl/: account.h  ledger.h  utils.h
src/: ledger.cpp  main.cpp  utils.cpp
src/headers/: ledger.h  utils.h  xrplException.h
src/xrpl/: account.h  ledger.h  utils.h
